zkay/examples/type_errors/ModifyFinalVar.zkay
pragma zkay >=0.2.0;

contract ModifyFinalArgument {

	function f() public {
		final uint x = 10;
		x = 20;
	}
}
